Add account settings endpoints
